# smart-road

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs  simulation.rs  types.rs
src/input/: keyboard.rs  mod.rs
src/intersection/: mod.rs
src/render/: intersection.rs  mod.rs  sdl2_manager.rs  statistics.rs  stats_window.rs  textures.rs  vehicle.rs  vehicle_renderer.rs  world.rs
src/render/lanes/: lanes.rs  mod.rs
src/sim/: conflict.rs  intersections.rs  mod.rs  physics.rs  statistics.rs  types.rs  vehicle.rs
src/spawn/: generator.rs  spawner.rs
src/traffic/: collision.rs  lane.rs  manager.rs  mod.rs
